...
            "state": "translated",
            "value": "As contas não estão configuradas nesta versão. Tudo continua funcionando neste aparelho."
          }
        }
      }
    },
    "Add": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir"
          }
...
            "state": "translated",
            "value": "Dia exibido"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Eliminar"
          }
...
            "state": "translated",
            "value": "São %@, e %@."
          }
        }
      }
    },
    "Keep it": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Conservarlo"
          }
...
            "state": "translated",
            "value": "Vezes por semana"
          }
        }
      }
    },
    "To-do": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Tarea"
          }
...
